<resources>
    <string name="app_name">Rakkebny</string>

    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="signup">Sign Up Now</string>
    <string name="login">Login</string>
    <string name="sign_up_hint">Sign Up</string>
    <string name="signup_activity_title">Sign Up</string>
    <string name="login_activity_title">Login</string>

    <string name="nav_main_label">Main</string>
    <string name="nav_subscribe_label">My Bus Reservation</string>
    <string name="nav_profile_label">Profile</string>
    <string name="nav_settings_label">Settings</string>
    <string name="nav_logout_label">Logout</string>
    <string name="current_line_textview_text">Your current Line is:</string>
    <string name="title_widget_info">Rakkebny</string>
    <string name="ticket_purchase_tip">After purchasing successsfully completed you can follow buses on the Map and reserve them</string>
    <string name="line_selection_tip">Changing you line subscription will make your vehicle to the passenger in your newly selected route</string>
    <string name="tickets_number">tickets</string>
    <string name="reservation_dialog_title">Confirm Reservation</string>
    <string name="reservation_dialog_body_text">By confirming your reservation you will get a place in this bus</string>
    <string name="reservation_dialog_yes_button_text">Yes</string>
    <string name="reservation_dialog_no_button_text">No</string>
    <string name="reservation_error_dialog_title">You don\'t have tickets</string>
    <string name="reservation_error_dialog_body_text">Please purchase tickets and continue your reservation</string>
    <string name="reservation_error_dialog_dismiss_button_text">@android:string/ok</string>
    <string name="location_permission_required_message">Location permission is mandatory for this application</string>
    <string name="tickets_activity_title">Buy Tickets</string>
    <string name="nav_tickets_label">Buy Tickets</string>
    <string name="manshia_asfra_line_label">Manshia : Asfra</string>
    <string name="manshia_victoria_line_label">Manshia : Victoria</string>
    <string name="manshia_mandra_line_label">Manshia : Mandra</string>
    <string name="asfra_mahta_line_label">Asfra : Mahta</string>
    <string name="mandra_mahta_line_label">Mandra : Mahta</string>
    <string name="mandra_aboker_line_label">Mandra : Aboker</string>
    <string name="select_line_button_text">Select Line</string>
    <string name="username_value_text">Ehab Hamdy</string>
    <string name="name_value_text">ehabhamdy</string>
    <string name="career_text">Mobile Developer</string>
    <string name="change_photo_button_text">Change Photo</string>
    <string name="tickets_purchase_hint_text">How many tickets you want to buy?</string>
    <string name="tickets_tv_text">Tickets</string>
    <string name="buy_now_button_text">Buy Now</string>
    <string name="widget_text1_text">You have</string>
    <string name="tickets_widget_text2_text">Tickets</string>
    <string name="buy_now_widget_button_text">Buy Now</string>
    <string name="line_confirm_button_text">Confirm your Change</string>
    <string name="user_name_label_text">Username</string>
    <string name="email_label_text">Email</string>
    <string name="tickets_label_text">Tickets</string>
    <string name="subscription_activity_label">Subscribe to line</string>
    <string name="connection_error_message">No Internet Connection</string>
    <string name="authentication_error_message">Email or Password is wrong      Authentication Failed!</string>
    <string name="signup_feedback_message">Check your email inbox to verify your email and login here</string>
    <string name="progressbar_loading_message">Loading&#8230;</string>
    <string name="photo_picker_title">Select Picture</string>
    <string name="ticket_purchase_confirmed_message">Confirmed</string>
    <string name="ticket_pref_key">ehab</string>
    <string name="line_subscription_confirmed_message">Confirmed</string>
    <string name="authentication_failed_message">Account is not verified     Authentication Failed!</string>
    <string name="tickets_text1_text">Tickets</string>
    <string name="default_line_text">Manshia : Asfra</string>
    <string name="progressdialog_loading_text">Loading&#8230;</string>
    <string name="email_field_required_text">"Email Required "</string>
    <string name="password_field_required_text">Password Required</string>
    <string name="phone_number_field_required_text">Phone Number Required</string>
    <string name="signup_failed_message">Sign Up Failed</string>
    <string name="profile_activity_title">Profile</string>
    <string name="reservation_completed_dialog_title">Reserved</string>
    <string name="reservation_completed_dialog_content_text">You now have a place, just watch the street!</string>
    <string name="done_label_text">Done</string>
    <string name="linechange_dialog_title">Confirm Line Change</string>
    <string name="linechange_dialog_body">Are you sure you want to subscrip to this line?</string>
    <string name="nav_current_events_label">Current Events</string>
    <string name="menu_logout">Logout</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="number_of_seats_hint">Number of Seats</string>
    <string name="register_event_button_label">Register</string>
    <string name="event_registration_tip">For payment and inquiries 01141943416 &#8211;  01280527683</string>
    <string name="registration_activity_title">Registration</string>
    <string name="saved_email" translatable="false">saved email</string>
    <string name="saved_ticket_credits" translatable="false">saved ticket credits</string>
    <string name="saved_username" translatable="false">saved username</string>
    <string name="preference_file_key" translatable="false">rakkebny_preferences</string>
    <string name="facebook_hint" translatable="false">Facebook</string>
    <string name="registration_confirmation_dialog_title">Good job!</string>
    <string name="registration_confirmation_dialog_message">Registration Confirmed, Ticked payments will be within 24 hours otherwise your registration will be cancelled automatically</string>
    <string name="edit">EDIT</string>
    <string name="nav_reserve_bus_label">Reserve Bus</string>
    <string name="bus_reservation_button_label">Confirm</string>
    <string name="bus_reservation_activity_title">Select your Itinerary</string>
    <string name="pickup_location_label">Choose your pickup Location</string>
    <string name="dropoff_location_label">Choose your drop off Location</string>
    <string name="confirmation_dialog_body_text" translatable="false">By pressing confirm, you will have a seat to your name on our microbus. Cancellation is only available before 12AM the day before your trip. Repeated, unexcused cancellations will result in your account being permanently deleted.</string>

    <string-array name="from_locations_labels">
        <item>El-Mandara</item>
        <item>El-Asafra Train Station</item>
        <item>Nafaq 45</item>
        <item>Sidi Bishr Train Station</item>
        <item>Nafaq Iskander Ibrahim</item>
        <item>Victoria Train Station</item>
        <item>Nafaq El-Mahrousa</item>
        <item>San Stefano</item>
        <item>Nafaq Gleem</item>
        <item>Nafaq El-Mohandseen</item>
        <item>Nafaq Roushdy</item>
        <item>Nafaq Cleopatera</item>
        <item>Nafaq Sporting</item>
        <item>Nafaq El-Shatby</item>
    </string-array>

    <string-array name="to_locations_labels">
        <item>Faculty of Engineering</item>
        <item>Faculty of Science</item>
        <item>El-Mogama3 El-Teby</item>
        <item>El-Mogama3 El-Nazary</item>
    </string-array>

    <string-array name="times" translatable="false">
        <item>7:30 AM</item>
        <item>8:00 AM</item>
        <item>8:30 AM</item>
        <item>2:30 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>4:30 PM</item>
    </string-array>

    <string-array name="from_locations_coordinates" translatable="false">
        <item>31.276978,30.003926</item>
        <item>31.271417,30.006895</item>
        <item>31.259015,29.989211</item>
        <item>31.257271,29.994528</item>
        <item>31.267551,29.995620</item>
        <item>31.248433,29.979889</item>
        <item>31.254961,29.975495</item>
        <item>31.245489,29.967578</item>
        <item>31.240505,29.958967</item>
        <item>31.238662,29.952797</item>
        <item>31.234049,29.946047</item>
        <item>31.224346,29.935316</item>
        <item>31.211973,29.915788</item>
        <item>31.211443,29.916151</item>
    </string-array>


    <string-array name="to_locations_coordinates" translatable="false">
        <item>31.206395,29.924392</item>
        <item>31.207482,29.918939</item>
        <item>31.201929,29.907257</item>
        <item>31.207342,29.910853</item>
    </string-array>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    
    <string-array name="main_places">
        <item>Mansheya</item>
        <item>Raml Station</item>
        <item>Shatby</item>
        <item>Ibrahimiya</item>
        <item>Sporting</item>
        <item>Cleopatra</item>
        <item>Sidi Gaber</item>
        <item>Roushdy</item>
        <item>Gleem</item>
        <item>Saba Basha</item>
        <item>San Stefano</item>
        <item>Louran</item>
        <item>Muhammad Nagib</item>
        <item>Sidi Beshr</item>
        <item>Miami</item>
        <item>45</item>
        <item>Asafra</item>
        <item>Mandara</item>
    </string-array>

    <string-array name="colleges">
        <item>Faculty of Engineering</item>
        <item>Faculty of Science</item>
        <item>Faculty of Agriculture</item>
        <item>Faculty of Medicine</item>
        <item>Faculty of Pharmacy</item>
        <item>Faculty of Arts</item>
        <item>Faculty of Fine Arts</item>
        <item>Faculty of Commerce</item>
        <item>Faculty of Law</item>
        <item>Faculty of Education</item>
    </string-array>
    <string name="gender_label">Gender</string>
    <string name="phone_label">Phone Number</string>
    <string name="area_label">Area</string>
    <string name="college_label">College</string>


    //Facebook SDK string values
    <string name="facebook_app_id">2040383592669816</string>
    <string name="fb_login_protocol_scheme">fb2040383592669816</string>
</resources>
